Compress snapshots on iOS https://bugs.webkit.org/show_bug.cgi?id=149814 -and corresponding- rdar://problem/22976230

Reviewed by Simon Fraser.

Source/WebCore:

Though the default is still RGBA, it is now possible to create an IOSurface
that uses the YUV422 pixel format.
* platform/graphics/cocoa/IOSurface.h:
* platform/graphics/cocoa/IOSurface.mm:
(IOSurface::surfaceFromPool):
(IOSurface::create):
(IOSurface::createFromImage):
(IOSurface::IOSurface):
(IOSurface::releaseGraphicsContext):

In order to have a YUV IOSurface, we actually have to create an RGBA surface
first and then convert it to YUV, so this class method will handle that.
(IOSurface::convertToFormat):

Necessary SPI.
* platform/spi/cocoa/IOSurfaceSPI.h:

Source/WebKit2:

Compress the snapshot.
* UIProcess/API/Cocoa/WKWebView.mm:
(-[WKWebView _takeViewSnapshot]):

Since the snapshots are converted to YUV asynchronously, it is possible to
get here and have a snapshot that does not yet have an image, so we have to
relax this constraint.
* UIProcess/mac/ViewSnapshotStore.mm:
(WebKit::ViewSnapshotStore::recordSnapshot):



Canonical link: https://commits.webkit.org/167922@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@190574 268f45cc-cd09-0410-ab3c-d52691b4dbfc